# BioAuth

./: .gitignore  .gitignore.bak  CMakeLists.txt  README.md
experiments/: CMakeLists.txt
experiments/dot-product/: dot_product_config.h  dot_product_fake_offline.cpp  dot_product_party_0.cpp  dot_product_party_1.cpp
experiments/dot-product-db/: CMakeLists.txt  dot_product_db_config.h  dot_product_db_offline_party_0.cpp  dot_product_db_offline_party_1.cpp  dot_product_db_party_0.cpp  dot_product_db_party_1.cpp
experiments/secure-com/: CMakeLists.txt  com_config.h  com_party_0.cpp  com_party_1.cpp
src/BMR/: AndJob.d  CommonParty.d  GarbledGate.d  Key.d  Party.d  Register.d  TrustedParty.d  msg_types.d  proto_utils.d
src/BMR/network/: Client.d  Node.d  Server.d  utils.d
src/FHE/: Ciphertext.d  Diagonalizer.d  DiscreteGauss.d  FFT.d  FFT_Data.d  FHE_Keys.d  FHE_Params.d  Matrix.d  NTL-Subs.d  NoiseBounds.d  P2Data.d  Plaintext.d  QGroup.d  Random_Coins.d  Ring.d  Ring_Element.d  Rq_Element.d  Subroutines.d
src/GC/: AtlasSecret.d  FakeSecret.d  Instruction.d  PostSacriBin.d  Rep4Prep.d  Rep4Secret.d  Semi.d  SemiPrep.d  square64.d
src/Math/: Bit.d  Setup.d  Square.d  ValueInterface.d  Zp_Data.d  bigint.d  bigint.h  gf2n.d  gf2nlong.d  gfpvar.d  square128.d
src/OT/: BaseOT.d  BitDiagonal.d  MascotParams.d  OTExtension.d  OTExtensionWithMatrix.d  OTTripleSetup.d
src/Processor/: BaseMachine.d  DataPositions.d  ExternalClients.d  FixInput.d  FloatInput.d  FunctionArgument.d  HonestMajorityMachine.d  Instruction.d  OnlineOptions.d  PrepBase.d  ProcessorBase.d  Program.d  RingOptions.d  ThreadQueue.d  ThreadQueues.d  TruncPrTuple.d
src/Tools/: BitVector.d  Buffer.d  Commit.d  Coordinator.d  DiskVector.d  ExecutionStats.d  FlexBuffer.d  Hash.d  Lock.d  NamedStats.d  NetworkOptions.d  OfflineMachineBase.d  Subroutines.d  TimerWithComm.d  Waksman.d  aes-ni.d  aes.d  benchmarking.d  mkpath.d  names.d  octetStream.d  random.d  time-func.d
src/fake-offline/: FakeAddConstantGate.h  FakeAddGate.h  FakeAvgPool2DGate.h  FakeCircuit.h  FakeConv2DGate.h  FakeConv2DTruncGate.h  FakeElemMultiplyGate.h  FakeGate.h  FakeGtzGate.h  FakeInputGate.h  FakeMultiplyGate.h  FakeMultiplyTruncGate.h  FakeOutputGate.h  FakeParty.h  FakeReLUGate.h  FakeSubtractGate.h
src/networking/: CMakeLists.txt  CryptoPlayer.d  Party.cpp  Party.h  Player.d  Receiver.d  Sender.d  Server.d  ServerSocket.d  fss-client.cpp  fss-client.h  fss-common.cpp  fss-common.h  fss-server.cpp  fss-server.h  fss-test.cpp  sockets.d
src/protocols/: AddConstantGate.h  AddGate.h  AvgPool2DGate.h  Circuit.h  Conv2DGate.h  Conv2DTruncGate.h  CowGearOptions.d  ElemMultiplyGate.h  Gate.h  GtzGate.h  HighGearKeyGen.d  InputGate.h  LowGearKeyGen.d  MalRepRingOptions.d  MultiplyGate.h  MultiplyTruncGate.h  OutputGate.h  PartyWithFakeOffline.h  ReLUGate.h  ShamirOptions.d  SubtractGate.h
src/share/: IsSpdz2kShare.h  Mod2PowN.h  Spdz2kShare.h
src/utils/: Timer.cpp  Timer.h  fixed_point.h  linear_algebra.h  print_vector.h  rand.h  tensor.h  uint128_io.h
