add_executable(dot_product_db_party_0 dot_product_db_party_0.cpp dot_product_db_config.h)
add_executable(dot_product_db_party_1 dot_product_db_party_1.cpp dot_product_db_config.h)
add_executable(dot_product_db_offline_party_0 dot_product_db_offline_party_0.cpp dot_product_db_config.h)
add_executable(dot_product_db_offline_party_1 dot_product_db_offline_party_1.cpp dot_product_db_config.h)

target_link_libraries(dot_product_db_party_0 ${ONLINE_LIB})
target_link_libraries(dot_product_db_party_1 ${ONLINE_LIB})
target_link_libraries(dot_product_db_offline_party_0 ${ONLINE_LIB})
target_link_libraries(dot_product_db_offline_party_1 ${ONLINE_LIB})
# target_link_libraries(dot_product_db_fake_offline ${ONLINE_LIB})
